# ptex

src/ptex/: CMakeLists.txt  PtexReader.h  PtexSeparableKernel.h  PtexTriangleKernel.h  Ptexture.h
src/utils/: CMakeLists.txt
